  emitting unwanted messages when testing Google App Engine websites.
- Fixed bug in test names output by xunit plugin. Thanks to Philip
  Jenvey for the bug report and patch (#280).
- Fixed bug in profile plugin that caused stats to fail to print under Python
  2.5 and later. Thanks to djs at n-cube dot org for the bug report (#285).
- The xunit plugin now tags skipped tests with a <skipped> testcase tag.

0.11.1

- Fixed bug in xunit plugin xml escaping. Thanks to Nat Williams for the bug
  report (#266).
- Fixed bug in xunit plugin that could cause test run to crash after certain
  types of errors or actions by other plugins.
- Fixed bug in testid plugin that could cause test run to crash after certain
  types of errors or actions by other plugins.
- Fixed bug in collect only plugin that caused it to fail when collecting from
  test generators.
- Fixed some broken html in docs.

0.11

- Added multiprocess plugin that allows tests to be run in parallel
  across multiple processes.
- Added logcapture plugin that captures logging messages and prints them with
  failing tests. Thanks to Max Ischenko for the implementation.
- Added optional HTML coverage reports to coverage plugin. Thanks to Augie
  Fackler for the patch.
- Added plugin that enables collection of tests in all modules. Thanks to
  Peter Fein for the patch (#137).
- Added --failed option to testid plugin. When this option is in effect, if
  any tests failed in the previous test run (so long as testid was active for
  that test run) only the failed tests will run.
- Made it possible to 'yield test' in addition to 'yield test,' from test
  generators. Thanks to Chad Whitacre for the patch (#230).
- Fixed bug that caused traceback inspector to fail when source code file
  could not be found. Thanks to Philip Jenvey for the bug report and patch
  (#236).
- Fixed some issues limiting compatibility with IronPython. Thanks to Kevin
  Mitchell for the patch.